[CRIMAPP-1477] Fix action button alignment (#966)

--- a/app/assets/stylesheets/local/custom.scss
+++ b/app/assets/stylesheets/local/custom.scss
@@ -151,3 +151,7 @@ body.js-enabled {
   display: flex;
   align-items: center;
 }
+
+.govuk-button-group form {
+  display: flex;
+}
